--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-.idea
+
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
+
+###> cadrien/bulma-bridge ###
+.idea/
+###< cadrien/bulma-bridge ###
